k8s2/dev/sso-static-content/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sso-static-content
    env: dev
    maestro: "true"
    maestroversion: v2
    team: sso
  name: sso-static-content
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sso-static-content
      env: dev
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: app-dev-sso-static-content
      creationTimestamp: null
      labels:
        app: sso-static-content
        env: dev
        maestro: "true"
        maestroversion: v2
        team: sso
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: sso-static-content
                  env: dev
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 100
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: sso-static-content
                  env: dev
              topologyKey: kubernetes.io/hostname
            weight: 10
      containers:
      - env:
        - name: MAESTRO_MONGO_SSOSTATICCONTENT_USERNAME
          valueFrom:
            secretKeyRef:
              key: MAESTRO_MONGO_SSOSTATICCONTENT_USERNAME
              name: sso-static-content
        - name: MAESTRO_MONGO_SSOSTATICCONTENT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: MAESTRO_MONGO_SSOSTATICCONTENT_PASSWORD
              name: sso-static-content
        - name: MAESTRO_MONGO_SSOSTATICCONTENT_HOSTS
          value: dev-padmin1-maestro-908271b5-shard-00-00-wfrtn.mongodb.net:27017,dev-padmin1-maestro-908271b5-shard-00-01-wfrtn.mongodb.net:27017,dev-padmin1-maestro-908271b5-shard-00-02-wfrtn.mongodb.net:27017
        - name: MAESTRO_MONGO_SSOSTATICCONTENT_OPTIONS
          value: '{"ssl":"true","authSource":"admin","replicaSet":"dev-padmin1-maestro-908271b5-shard-0"}'
        - name: MAESTRO_MONGO_SSOSTATICCONTENT_CONNSTR
          value: mongodb://$(MAESTRO_MONGO_SSOSTATICCONTENT_USERNAME):$(MAESTRO_MONGO_SSOSTATICCONTENT_PASSWORD)@dev-padmin1-maestro-908271b5-shard-00-00-wfrtn.mongodb.net:27017,dev-padmin1-maestro-908271b5-shard-00-01-wfrtn.mongodb.net:27017,dev-padmin1-maestro-908271b5-shard-00-02-wfrtn.mongodb.net:27017/sso-static-content?ssl=true&authSource=admin&replicaSet=dev-padmin1-maestro-908271b5-shard-0
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: CREATION_TIMESTAMP
          value: "1581452497382"
        - name: INSTANCE
          value: static.dev.jay.sharecare.com
        - name: REGION
          value: US
        - name: MAESTRO_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: MAESTRO_CREATION_TIMESTAMP
          value: "1581452497382"
        - name: MAESTRO_INSTANCE
          value: static.dev.jay.sharecare.com
        - name: MAESTRO_HOSTS
          value: static.dev.jay.sharecare.com
        - name: MAESTRO_REGION
          value: US
        - name: MAESTRO_ALL_REGIONS
          value: US
        image: nexus.admin.sharecare.com/sso-static-content:1.0.1-102
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - sleep
              - "5"
        livenessProbe:
          failureThreshold: 4
          httpGet:
            path: /static/healthcheck.html?livenessProbe
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 5
        name: sso-static-content
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 4
          httpGet:
            path: /static/healthcheck.html?readynessProbe
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 10
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 64Mi
      imagePullSecrets:
      - name: nexus
